fixtures/vc20/invalid/vp-iss-holder-mismatch.jwt.jsonld
{
  "iss": "did:web:did-server",
  "holder": "did:web:other-participant.example.com",
  "@context": ["https://www.w3.org/ns/credentials/v2"],
  "id": "urn:uuid:jwt-bdd-vp-mismatch-1",
  "type": ["VerifiablePresentation"],
  "verifiableCredential": ["{{VC_JWT}}"]
}
